...
    @State private var sheetDetent: PresentationDetent = .fraction(0.3)
    @State private var centerOnUserWhenAuthorized: Bool = false
    @State private var showLocationDeniedAlert: Bool = false

    var body: some View {
        ZStack (alignment: .bottomTrailing) {
            Map(position: $cameraPosition, selection: $selectedItem) {
                UserAnnotation()
                ForEach(places, id: \.self) { place in
                    place.mapMarker
                        .tag(place)
                }
            }
...
                })
                .buttonBorderShape(.circle)
                .controlSize(.extraLarge)
                .padding(.horizontal, -6)
                .shadow(radius: 8, x: 0, y: 4)
                .prominentActionStyle()
                .accessibilityIdentifier("centerOnUserButton")
            }
            .padding(.all, 24.0)
            
        }
        .mapStyle(.standard(elevation: .realistic))
        .onChange(of: selectedItem) {
...
